<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hokku.intervalltimer.mycounter">

    <TextView
        android:id="@+id/textViewOnTimeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:text="@string/ontimeleft"
        android:textSize="55sp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/textViewOffTimeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offtimeleft"
        android:layout_marginTop="111dp"
        android:layout_below="@+id/textViewOnTimeLeft"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewIntervallLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intervallleft"
        android:layout_below="@+id/textViewOffTimeLeft"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"

        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:textSize="55sp"
        android:textStyle="bold"/>


</RelativeLayout>
